<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue3"
    android:scrollbars="vertical"
    tools:context="com.josevicente.proyecto_finalpmm.Fragments.PerfilFragment">

    <RelativeLayout
        android:id="@+id/relativePerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/textNombre"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNombre"
            android:ems="10"
            android:hint="@string/editNombre"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editNombre"
            android:text="@string/textApellido"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textApellido"
            android:ems="10"
            android:hint="@string/editApellido"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editApellido"
            android:text="@string/textEdad"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textEdad"
            android:ems="10"
            android:hint="@string/editEdad"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editEdad"
            android:text="@string/textNick"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNick"
            android:ems="10"
            android:hint="@string/editNick"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnJugador"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editNick"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/btnJugador"
            android:textColor="@android:color/background_light"
            android:layout_marginBottom="10dp"
            android:textSize="18sp" />

    </RelativeLayout>


</ScrollView>
