<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:orientation="horizontal"
    tools:context="com.josevicente.proyecto_finalpmm.Fragments.JuegoFragment">

    <TableRow
        android:id="@+id/tableJuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nombreUsuario"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="20dp"
            android:text="@string/textNombre"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/puntosUsuario"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/textPuntos"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </TableRow>

    <ImageButton
        android:id="@+id/btnDado1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tableJuego"
        android:layout_marginStart="35dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/holo_orange_light"
        android:contentDescription="@string/btnDado1"
        android:scaleType="centerCrop"
        android:src="@drawable/dice1x32" />

    <ImageButton
        android:id="@+id/btnDado2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/btnDado1"
        android:layout_marginStart="52dp"
        android:layout_toEndOf="@+id/btnDado1"
        android:background="@android:color/holo_orange_light"
        android:contentDescription="@string/btnDado2"
        android:scaleType="centerCrop"
        android:src="@drawable/dice2x32" />

    <ImageButton
        android:id="@+id/btnDado3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/btnDado2"
        android:layout_marginStart="51dp"
        android:layout_toEndOf="@+id/btnDado2"
        android:background="@android:color/holo_orange_light"
        android:contentDescription="@string/btnDado3"
        android:scaleType="centerCrop"
        android:src="@drawable/dice3x32" />

    <ImageButton
        android:id="@+id/btnDado4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/btnDado1"
        android:layout_marginTop="11dp"
        android:layout_toStartOf="@+id/btnDado5"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/btnDado4"
        android:scaleType="centerCrop"
        android:src="@drawable/dice4x32" />

    <ImageButton
        android:id="@+id/btnDado5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/btnDado2"
        android:layout_alignTop="@+id/btnDado4"
        android:layout_marginStart="63dp"
        android:background="@android:color/holo_orange_light"
        android:contentDescription="@string/btnDado5"
        android:scaleType="centerCrop"
        android:src="@drawable/dice5x32" />

    <ImageButton
        android:id="@+id/btnDado6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/btnDado2"
        android:layout_below="@+id/btnDado4"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_orange_light"
        android:contentDescription="@string/btnDado6"
        android:scaleType="centerCrop"
        android:src="@drawable/dice6x32" />

</RelativeLayout>
